<?xml version="1.0"?>
<package>
  <name>ur10_armsim</name>
  <version>0.0.0</version>
  <description>A simple robot simulator for the UR10 robot arm</description>

  <maintainer email="ecorbe@gmail.com">Ernesto Corbellini</maintainer>

  <license>TODO</license>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>numpy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
